--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -67,5 +67,15 @@
         <string>here-location</string>
         <string>tomtomgo</string>
     </array>
+	<key>UISupportsDocumentBrowser</key>
+	<true/>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>請允許取得定位</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>請允許取得定位</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>請允許取得定位</string>
+	<key>io.flutter.embedded_views_preview</key>
+	<true/>
 </dict>
 </plist>
